--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-"name":"fashionnova-ecommerce",
-"version":"0.1.0",
-"scripts":{
-"dev":"next dev",
-"build":"next build",
-"start":"next start",
-"lint":"next lint"
+"name": "fashionnova",
+"version": "0.1.0",
+"scripts": {
+"dev": "next dev",
+"build": "next build",
+"start": "next start"
 },
-"dependencies":{
-"next":"14.0.0",
-"react":"^18.2.0",
-"react-dom":"^18.2.0",
-"@fortawesome/react-fontawesome":"^0.2.0",
-"@fortawesome/free-solid-svg-icons":"^6.5.0",
-"@fortawesome/free-brands-svg-icons":"^6.5.0",
-"@fortawesome/fontawesome-svg-core":"^6.5.0"
+"dependencies": {
+"next": "14.0.0",
+"react": "^18.0.0",
+"react-dom": "^18.0.0"
+},
+"devDependencies": {
+"autoprefixer": "^10.0.1",
+"postcss": "^8.0.0",
+"tailwindcss": "^3.3.0"
 }
 }
